--- a/package.json
+++ b/package.json
@@ -21,13 +21,32 @@
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/core": "4.4.0",
+    "@ionic-native/google-plus": "^4.4.2",
+    "@ionic-native/native-storage": "^4.4.2",
+    "@ionic-native/social-sharing": "^4.4.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.16",
     "@ionic/storage": "2.1.3",
+    "@ngx-translate/core": "^9.0.1",
+    "@ngx-translate/http-loader": "^2.0.0",
+    "cordova-android": "6.3.0",
+    "cordova-ios": "4.5.4",
+    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-googleplus": "^5.1.1",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-nativestorage": "^2.2.2",
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-whitelist": "^1.3.1",
+    "cordova-plugin-x-socialsharing": "^5.2.1",
+    "es6-promise-plugin": "^4.1.0",
+    "firebase": "^4.6.2",
     "ionic-angular": "3.9.2",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "promise-polyfill": "6.1.0",
     "rxjs": "5.5.2",
+    "save": "^2.3.1",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
   },
@@ -35,5 +54,23 @@
     "@ionic/app-scripts": "3.1.3",
     "typescript": "2.4.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-x-socialsharing": {},
+      "cordova-plugin-nativestorage": {},
+      "cordova-plugin-googleplus": {
+        "REVERSED_CLIENT_ID": "423889102045-mob7ltd45abelvhgfroogq0osattmjq0.apps.googleusercontent.com"
+      },
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {}
+    },
+    "platforms": [
+      "ios",
+      "android"
+    ]
+  }
 }
