--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "byeline",
+  "name": "cart-test",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
@@ -22,21 +22,38 @@
     "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/native-storage": "^4.5.2",
+    "@ionic-native/paypal": "^4.5.2",
+    "@ionic-native/push": "^4.5.2",
     "@ionic-native/social-sharing": "^4.5.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
-    "@ionic/pro": "1.0.16",
+    "@ionic-native/stripe": "^4.5.2",
     "@ionic/storage": "2.1.3",
     "@ngx-translate/core": "^9.0.2",
     "@ngx-translate/http-loader": "^2.0.1",
+    "card.io.cordova.mobilesdk": "^2.1.0",
+    "com.paypal.cordova.mobilesdk": "^3.5.0",
+    "cordova-android": "7.0.0",
+    "cordova-ios": "4.5.4",
+    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-facebook4": "^1.9.1",
+    "cordova-plugin-googleplus": "^5.1.1",
+    "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-nativestorage": "^2.2.2",
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-stripe": "^1.5.3",
+    "cordova-plugin-whitelist": "^1.3.1",
     "cordova-plugin-x-socialsharing": "^5.2.1",
-    "firebase": "^4.8.1",
+    "es6-promise-plugin": "^4.1.0",
+    "firebase": "^4.8.0",
     "ionic-angular": "3.9.2",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "phonegap-plugin-push": "^2.1.2",
     "promise-polyfill": "7.0.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
+    "twitter-connect-plugin": "^0.6.0",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
@@ -47,7 +64,30 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-x-socialsharing": {},
-      "cordova-plugin-nativestorage": {}
-    }
+      "cordova-plugin-nativestorage": {},
+      "com.paypal.cordova.mobilesdk": {},
+      "cordova-plugin-googleplus": {
+        "REVERSED_CLIENT_ID": "423889102045-mob7ltd45abelvhgfroogq0osattmjq0.apps.googleusercontent.com"
+      },
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-facebook4": {
+        "APP_ID": "1858204527781194",
+        "APP_NAME": "ByeLine"
+      },
+      "twitter-connect-plugin": {
+        "FABRIC_KEY": "22e52b651977bf4dc8f239e306c474402245853a"
+      },
+      "cordova-plugin-stripe": {},
+      "phonegap-plugin-push": {
+        "FCM_VERSION": "11.0.1"
+      }
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
