--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/core": "4.4.0",
+    "@ionic-native/facebook": "^4.5.2",
+    "@ionic-native/in-app-browser": "^4.5.2",
     "@ionic-native/native-storage": "^4.5.2",
     "@ionic-native/paypal": "^4.5.2",
     "@ionic-native/push": "^4.5.2",
